# cpp-cli-tool

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake-single-platform.yml
Commands/: Command.cpp  Command.h  CommandFactory.cpp  CommandFactory.h  CommandPipeline.cpp  CommandPipeline.h
Commands/Argument/: Argument.h  CinArgument.cpp  CinArgument.h  FilenameArgument.cpp  FilenameArgument.h  IntegralArgument.cpp  IntegralArgument.h  OptionArgument.cpp  OptionArgument.h
Commands/Concrete/: BatchCommand.cpp  BatchCommand.h  DateCommand.cpp  DateCommand.h  EchoCommand.cpp  EchoCommand.h  HeadCommand.cpp  HeadCommand.h  PromptCommand.cpp  PromptCommand.h  RmCommand.cpp  RmCommand.h  TimeCommand.cpp  TimeCommand.h  TouchCommand.cpp  TouchCommand.h  TrCommand.cpp  TrCommand.h  TruncateCommand.cpp  TruncateCommand.h  WcCommand.cpp  WcCommand.h
Commands/Exceptions/: UnknownCommand.h
Commands/Output/: ConsoleOutputter.cpp  ConsoleOutputter.h  FileOutputter.cpp  FileOutputter.h  Outputter.cpp  Outputter.h  StringOutputter.cpp  StringOutputter.h
Core/: Interpreter.cpp  Interpreter.h  Parser.cpp  Parser.h  Token.cpp  Token.h
Core/Exceptions/: InvalidCharactersFound.h
Core/Reader/: CommandLineReader.cpp  CommandLineReader.h  FileReader.cpp  FileReader.h  Reader.h
javni_testovi_projekat_2025/: all.txt  basic_commands.txt  red_commands.txt
