cmake_minimum_required(VERSION 4.1)
project(PROJEKAT)

set(CMAKE_CXX_STANDARD 20)

add_executable(PROJEKAT main.cpp
        Core/Reader/Reader.h
        Core/Reader/FileReader.cpp
        Core/Reader/FileReader.h
        Core/Reader/CommandLineReader.cpp
        Core/Reader/CommandLineReader.h
        Core/Token.cpp
        Core/Token.h
        Commands/Command.h
        Core/Parser.cpp
        Core/Parser.h
        Core/Interpreter.cpp
        Core/Interpreter.h
        Commands/CommandFactory.cpp
        Commands/CommandFactory.h
        Commands/Exceptions/UnknownCommand.h
        Commands/Concrete/EchoCommand.cpp
        Commands/Concrete/EchoCommand.h
        Core/Exceptions/InvalidCharactersFound.h
        Commands/Concrete/PromptCommand.cpp
        Commands/Concrete/PromptCommand.h
        Commands/Concrete/TimeCommand.cpp
        Commands/Concrete/TimeCommand.h
        Commands/Concrete/DateCommand.cpp
        Commands/Concrete/DateCommand.h
        Commands/Concrete/TouchCommand.cpp
        Commands/Concrete/TouchCommand.h
        Commands/Argument/Argument.h
        Commands/Argument/IntegralArgument.cpp
        Commands/Argument/IntegralArgument.h
        Commands/Argument/FilenameArgument.cpp
        Commands/Argument/FilenameArgument.h
        Commands/Argument/OptionArgument.cpp
        Commands/Argument/OptionArgument.h
        Commands/Command.cpp
        Commands/Output/Outputter.cpp
        Commands/Output/Outputter.h
        Commands/Output/FileOutputter.cpp
        Commands/Output/FileOutputter.h
        Commands/Output/ConsoleOutputter.cpp
        Commands/Output/ConsoleOutputter.h
        Commands/CommandPipeline.cpp
        Commands/CommandPipeline.h
        Commands/Output/StringOutputter.cpp
        Commands/Output/StringOutputter.h
        Commands/Concrete/TruncateCommand.cpp
        Commands/Concrete/TruncateCommand.h
        Commands/Concrete/RmCommand.cpp
        Commands/Concrete/RmCommand.h
        Commands/Concrete/WcCommand.cpp
        Commands/Concrete/WcCommand.h
        Commands/Argument/CinArgument.cpp
        Commands/Argument/CinArgument.h
        Commands/Concrete/TrCommand.cpp
        Commands/Concrete/TrCommand.h
        Commands/Concrete/HeadCommand.cpp
        Commands/Concrete/HeadCommand.h
        Commands/Concrete/BatchCommand.cpp
        Commands/Concrete/BatchCommand.h)
